# NumCpp-playground

./: CMakeLists.txt  README.md
src/: main.cpp
